--- a/c/co/con/contactology.com.html
+++ b/c/co/con/contactology.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the contactology.com privacy policy that was archived on 2007-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070628231709id_/http%3A//www.contactology.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the contactology.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227061754id_/http%3A//www.contactology.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
     <title>Privacy Policy - Contactology</title>
@@ -24,11 +24,13 @@ urchinTracker();
   <tbody><tr>
     <td width="50" bgcolor="#EFEFEF"><img src="images/em_header_01b.gif" width="50" height="23"><br></td>
   	<td width="791" bgcolor="#DDDDDD" align="center" valign="middle">
-		55,852,466&nbsp;&nbsp;<b>Emails Sent</b>
+
+		79,936,656&nbsp;&nbsp;<b>Emails Sent</b>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		12,916,351&nbsp;&nbsp;<b>Contacts Stored</b>
+		16,291,583&nbsp;&nbsp;<b>Contacts Stored</b>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		15,166&nbsp;&nbsp;<b>Surveys Taken</b>
+		18,854&nbsp;&nbsp;<b>Surveys Taken</b>
+
 	</td>
     <td width="47" bgcolor="#EFEFEF"><img src="images/em_header_05.gif" width="47" height="23"><br></td>
   </tr>
@@ -45,9 +47,9 @@ urchinTracker();
 	  <table width="597" border="0" align="left" cellpadding="0" cellspacing="0">
 		<tbody><tr>
 		  <td width="335" bgcolor="#FFFFFF"><img src="images/spacer.gif" border="0" width="335" height="1"><br></td>
-		  <td width="100" bgcolor="#FFFFFF"><img src="images/spacer.gif" border="0" width="100" height="1"><br></td>
+		  <td width="160" bgcolor="#FFFFFF"><img src="images/spacer.gif" border="0" width="160" height="1"><br></td>
 		  <td width="46" bgcolor="#FFFFFF"><img src="images/spacer.gif" border="0" width="46" height="1"><br></td>
-		  <td width="116" bgcolor="#FFFFFF"><img src="images/spacer.gif" border="0" width="116" height="1"><br></td>
+		  <td width="56" bgcolor="#FFFFFF"><img src="images/spacer.gif" border="0" width="56" height="1"><br></td>
 		</tr>
 	    <tr>
 		  <td colspan="4" width="597" bgcolor="#FFFFFF">
@@ -56,15 +58,23 @@ urchinTracker();
 		</tr>
 		<tr>
 		  <td width="335" bgcolor="#495E6D">
-		    <h1 style="padding: 0; margin: 0;"><a href="http://www.contactology.com" title="Contactology: Email Marketing Software"><img src="images/cont_logo_tag_335x104.gif" border="0" width="335" height="104" alt="Contactology: Contacts. Email. Surveys. Simple."></a></h1>
+		    <h1 style="padding: 0; margin: 0;"><a href="http://www.contactology.com" title="Contactology: Email Marketing Software"><img src="images/cont_logo_tag_335x104.gif" border="0" width="335" height="104" alt="Contactology: Email marketing smarts. Made simple."></a></h1>
 		  </td>
 		  <td width="262" colspan="3" bgcolor="#495E6D">
 		    <img src="images/spacer.gif" border="0" width="262" height="104"><br>
 		  </td>
 		</tr>
 		<tr>
-		  <td colspan="2" rowspan="2" width="435" class="NavBG">
-			<span class="NavDefault"><a href="overview.php">Overview</a></span>
+		  <td colspan="2" rowspan="2" width="495" class="NavBG">
+			<span class="NavDefault"><a href="overview.php">Features</a></span>
+			&nbsp;
+			|
+			&nbsp;
+			<span class="NavDefault"><a href="pricing.php">Pricing</a></span>
+			&nbsp;
+			|			
+			&nbsp;
+			<span class="NavDefault"><a href="clients.php">Clients</a></span>
 			&nbsp;
 			|
 			&nbsp;
@@ -72,11 +82,7 @@ urchinTracker();
 			&nbsp;
 			|
 			&nbsp;
-			<span class="NavDefault"><a href="clients.php">Clients</a></span>
-			&nbsp;
-			|
-			&nbsp;
-			<span class="NavDefault"><a href="pricing.php">Pricing</a></span>
+			<span class="NavDefault"><a href="http://www.contactology.com/blog/">Blog</a></span>
 			&nbsp;
 			|
 			&nbsp;
@@ -85,13 +91,13 @@ urchinTracker();
 		  <td rowspan="2" width="46" bgcolor="#495E6D">
 		    <img src="images/cont_nav_bar_curve.gif" width="46" height="25"><br>
 		  </td>
-		  <td width="116" bgcolor="#495E6D">
-		    <img src="images/spacer.gif" border="0" width="116" height="17"><br>
+		  <td width="56" bgcolor="#495E6D">
+		    <img src="images/spacer.gif" border="0" width="56" height="17"><br>
 		  </td>
 		</tr>
 		<tr>
-		  <td width="116" bgcolor="#DDDDDD">
-		    <img src="images/spacer.gif" border="0" width="116" height="8"><br>
+		  <td width="56" bgcolor="#DDDDDD">
+		    <img src="images/spacer.gif" border="0" width="56" height="8"><br>
 		  </td>
 		</tr>
 	  </tbody></table>
@@ -224,7 +230,21 @@ urchinTracker();
 						<td width="1" bgcolor="#DDDDDD"><img src="images/spacer.gif" width="1" height="1" border="0"><br></td>
 						<td width="14"><img src="images/spacer.gif" width="14" height="1" border="0"><br></td>
 						<td width="233" valign="top">
-														<a href="javaScript:void(0);" onclick="window.open('tour-01.php', 'SKTour', 'width=720,height=510,resizable=yes,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes')"><img src="images/navsplash_tour_228x77.gif" width="228" height="77" border="0" alt="Take a tour"></a><br>
+														<!-- Boldchat Live Chat Button HTML v1.10 (Type=Web,ChatButton=Contactology Live Support Icon,ChatWindow=Contactology Chat Window,Website=- None -,Department=- None -) -->
+							<table cellpadding="0" cellspacing="0" border="0">
+							<tbody><tr><td align="center"><a href="http://livechat.boldchat.com/aid/5583422829615728463/bc.chat?cwdid=8405999714803389092" target="_blank" onclick="this.newWindow = window.open('http://livechat.boldchat.com/aid/5583422829615728463/bc.chat?cwdid=8405999714803389092&amp;url=' + escape(document.location.href), 'Chat', 'toolbar=0,scrollbars=1,location=0,statusbar=0,menubar=0,resizable=1,width=640,height=480');this.newWindow.focus();this.newWindow.opener=window;return false;"><img alt="Live chat by Boldchat" src="http://cbi.boldchat.com/aid/5583422829615728463/bc.cbi?cbdid=7320486844389922480" border="0"></a></td></tr>
+							</tbody></table>
+							<!-- /Boldchat Live Chat Button HTML v1.10 -->
+
+							<br>
+
+														<table width="100%" border="0" cellpadding="0" cellspacing="0">
+								<tbody><tr>
+									<td width="100%" bgcolor="#DDDDDD"><img src="images/spacer.gif" width="1" height="1" border="0"><br></td>
+								</tr>
+							</tbody></table>
+							<br>
+							<a href="javaScript:void(0);" onclick="window.open('tour-01.php', 'SKTour', 'width=720,height=510,resizable=yes,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes')"><img src="images/navsplash_tour_228x77.gif" width="228" height="77" border="0" alt="Take a tour"></a><br>
 							<a href="trial.php"><img src="images/navsplash_trial_228x77.gif" width="228" height="77" border="0" alt="Get started with a trial account"></a><br>
 							<br>
 
@@ -384,9 +404,20 @@ urchinTracker();
 	    <a href="links.php">Links</a><br>
 		<br>
 		<br>
+
 	</td>
   </tr>
 </tbody></table>
+
+<!-- Boldchat Visitor Monitor HTML v1.30 (Website=- None -,ChatWindow=My Chat Window,ChatInvitation=My Invite Ruleset) -->
+<script language="JavaScript" type="text/javascript"><!--
+document.write('<scr' + 'ipt language="JavaScript" type="text/javascript" src="http://vms.boldchat.com/aid/5583422829615728463/bc.vms/vms.js?url=' + escape(document.location.href) + '&amp;referrer=' + escape(document.referrer) + '&amp;cidid=2852220934246072846&amp;cwdid=8405999714803389092&amp;cp=http&amp;cw=640&amp;ch=480"></scr' + 'ipt>');
+//-->
+</script><script language="JavaScript" type="text/javascript" src="http://vms.boldchat.com/aid/5583422829615728463/bc.vms/vms.js?url=https%3A//web.archive.org/web/20071227061754id_/http%253A//www.contactology.com/privacy.php&amp;referrer=&amp;cidid=2852220934246072846&amp;cwdid=8405999714803389092&amp;cp=http&amp;cw=640&amp;ch=480"></script>
+<noscript>
+<a href="http://www.boldchat.com" title="Visitor Monitoring" target="_blank"><img alt="Visitor Monitoring" src="http://vms.boldchat.com/aid/5583422829615728463/bc.vmi" border="0" width="1" height="1"></a>
+</noscript>
+<!-- /Boldchat Visitor Monitor HTML v1.30 -->
 </td>
 
             <td width="47" background="images/em_header_05.gif"><img src="images/em_header_05.gif" width="47" height="2"></td>
