--- a/n/nc/nci/ncirl.ie.html
+++ b/n/nc/nci/ncirl.ie.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ncirl.ie privacy policy that was archived on 2007-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070609111458id_/http%3A//www.ncirl.ie/inside.asp%3FpageId%3D1053%26sectionId%3D0%26level%3D1) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ncirl.ie privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227070630id_/http%3A//www.ncirl.ie/inside.asp%3FpageId%3D1053%26sectionId%3D0%26level%3D1) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -17,9 +17,20 @@
 <script type="text/javascript">
 function submitQuickLink() {
       var selectedValue = document.quickForm.quicklinks.value;
+
       if (selectedValue != "") {
-            window.location=selectedValue;
+            quickForm.action = selectedValue;
+            return true;
+      } else {
+            return false;
       }
+}
+
+function submitSearch() {
+	if((document.form2.SearchString.value.length==0) || (document.form2.SearchString.value=='Search Site')){
+		alert('Please enter a seach term');
+		return false;
+	};
 }
 </script>
 
@@ -73,12 +84,12 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 	
 	<ul>
 		<li><a href="http://www.ncirl.ie/default.asp">Home</a></li>
+		<li><a href="http://www.ncirl.ie/About_NCI/President's-Welcome">Welcome</a></li>
 		<li><a href="http://www.ncirl.ie/site/faq.asp?pageId=1107&amp;sectionId=2&amp;level=1">FAQs</a></li>
 		<li><a href="http://www.ncirl.ie/site/enquiries.asp?pageId=1012&amp;sectionId=15&amp;level=1">Enquiries</a></li>
 		<li><a href="http://www.ncirl.ie/Current Students/Library">Library</a></li>
-		<li><a href="http://www.ncirl.ie/About NCI/Job Vacancies">Job Vacancies</a></li>
-		<li><a href="http://www.ncirl.ie/site/staff_and_faculty.asp?pageId=897&amp;sectionId=15&amp;level=1">Staff &amp; Faculties</a></li>
-		<li><a href="http://www.ncirl.ie/About NCI/NCI Institutes">NCI Institutes</a></li>
+		<li><a href="http://www.ncirl.ie/Prospective_Students/Faculties_and_Departments">Faculties &amp; Depts</a></li>
+		<li><a href="http://www.ncirl.ie/site/staff_and_faculty.asp?pageId=897&amp;sectionId=15&amp;level=1">Staff Directory</a></li>
 	</ul>	
 	
 	<form class="searchform" action="http://www.ncirl.ie/site/search_results.asp" onsubmit="return submitSearch();" method="post" id="form2" name="form2">
@@ -103,7 +114,7 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
       			<option value="http://www.ncirl.ie/Programmes Courses/Post Graduate">Postgraduate Studies</option>
       			<option value="http://www.ncirl.ie/About NCI/Regional Campus Network">Campus Locations</option>
       			<option value="http://www.ncirl.ie/Prospective_Students/Accommodation1234">Accommodation</option>
-      			<option value="http://www.ncirl.ie/News &amp; Events/Graduation  2006">Graduation 2006</option>
+      			<option value="http://www.ncirl.ie/Current_Students/Graduation_2007">Graduation 2007</option>
 	            
       		</select> 
       		<input name="quicklink" type="submit" value="go" class="go">
@@ -113,7 +124,7 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 	  <div style=" clear:right; height:1px; "></div>
       <div id="mainmenu"> 
 	<ul>
-	      <li><a href="http://www.ncirl.ie/Programmes Courses">Programmes<br>Courses</a></li><li><a href="http://www.ncirl.ie/Prospective Students">Prospective<br>Students</a></li><li><a href="http://www.ncirl.ie/Current Students">Current<br>Students</a></li><li><a href="http://www.ncirl.ie/Corporate Services">Corporate<br>Services</a></li><li><a href="http://www.ncirl.ie/Research &amp; Innovation">Research &amp;<br>Innovation</a></li><li><a href="http://www.ncirl.ie/news_and_events.asp?sectionId=49">News &amp;<br>Events</a></li><li><a href="http://www.ncirl.ie/About NCI">About<br>NCI</a></li>
+	      <li><a href="http://www.ncirl.ie/Programmes Courses">Programmes<br>Courses</a></li><li><a href="http://www.ncirl.ie/Prospective_Students">Prospective<br>Students</a></li><li><a href="http://www.ncirl.ie/Current_Students">Current<br>Students</a></li><li><a href="http://www.ncirl.ie/Alumni &amp; Friends">Alumni &amp;<br>Friends</a></li><li><a href="http://www.ncirl.ie/Corporate_Services">Corporate<br>Services</a></li><li><a href="http://www.ncirl.ie/Research_&amp;_Innovation">Research &amp;<br>Innovation</a></li><li><a href="http://www.ncirl.ie/news_and_events.asp?sectionId=49">News &amp;<br>Events</a></li><li><a href="http://www.ncirl.ie/About_NCI">About<br>NCI</a></li>
 	</ul>	
 	</div>
 
@@ -144,7 +155,7 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 
 <div id="footer">
 	<div class="footer1">
-		<p class="copy">© 2007 National College of Ireland</p>
+		<p class="copy">© 2008 National College of Ireland</p>
 		<ul class="footlinks">
 			<li><a href="http://www.ncirl.ie/inside.asp?pageId=1053&amp;sectionId=0&amp;level=1 ">Privacy Policy</a>|</li>
 			<li><a href="http://www.ncirl.ie/inside.asp?pageId=1054&amp;sectionId=0&amp;level=1 ">Disclaimer</a>|</li>
@@ -169,6 +180,14 @@ eval("page" + id + " = window.open(URL, '" + id + "', 'toolbar=0,scrollbars=0,lo
 
 
 </div><!-- end wrapall -->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-527955-20";
+urchinTracker();
+</script>
+
 
 
 
