--- a/i/im/ima/imagecomics.com.html
+++ b/i/im/ima/imagecomics.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the imagecomics.com privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513214539id_/http%3A//imagecomics.com/termsofservice.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the imagecomics.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227080054id_/http%3A//www.imagecomics.com/termsofservice.php) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Image Comics | Terms of Service &amp; Privacy Policy</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<script language="javascript" src="./js/imagecomics.js"></script>
-	<script src="/mint/?js" type="text/javascript"></script><script type="text/javascript" src="https://web.archive.org/web/20080405054508/http://www.imagecomics.com/mint/?record&amp;key=383074523334703733375865424d6e4b30324e4b4b75437550484b46535531&amp;referer=&amp;resource=https%3A//web.archive.org/web/20070513214539id_/http%253A//imagecomics.com/termsofservice.php&amp;resource_title=Image%20Comics%20%7C%20Terms%20of%20Service%20%26%20Privacy%20Policy&amp;resource_title_encoded=0&amp;1582133110810&amp;serve_js"></script>
+	<script src="/mint/?js" type="text/javascript"></script><script type="text/javascript" src="https://web.archive.org/web/20080405054508/http://www.imagecomics.com/mint/?record&amp;key=383074523334703733375865424d6e4b30324e4b4b75437550484b46535531&amp;referer=&amp;resource=https%3A//web.archive.org/web/20071227080054id_/http%253A//www.imagecomics.com/termsofservice.php&amp;resource_title=Image%20Comics%20%7C%20Terms%20of%20Service%20%26%20Privacy%20Policy&amp;resource_title_encoded=0&amp;1582133118410&amp;serve_js"></script>
 </head>
 
 <body bgcolor="#003366" topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0" marginwidth="0" marginheight="0">
@@ -117,13 +117,125 @@
 
 <table width="150" border="0" cellpadding="0" cellspacing="0">
 	
+
+<!-- thumb = 5064, height = 105, width = 68 -->
+<!-- small = 5065, height = 154, width = 100 -->
+<!-- medium = 5066, height = 231, width = 150 -->
+
+<!-- thumb = 5068, height = 105, width = 68 -->
+<!-- small = 5069, height = 154, width = 100 -->
+<!-- medium = 5070, height = 231, width = 150 -->
+
+<!-- thumb = 5072, height = 105, width = 68 -->
+<!-- small = 5073, height = 154, width = 100 -->
+<!-- medium = 5074, height = 231, width = 150 -->
+
+<!-- thumb = 5076, height = 105, width = 68 -->
+<!-- small = 5077, height = 154, width = 100 -->
+<!-- medium = 5078, height = 231, width = 150 -->
+
+<!-- thumb = 5080, height = 105, width = 68 -->
+<!-- small = 5081, height = 154, width = 100 -->
+<!-- medium = 5082, height = 231, width = 150 -->
+
+<!-- thumb = 5084, height = 105, width = 68 -->
+<!-- small = 5085, height = 154, width = 100 -->
+<!-- medium = 5086, height = 231, width = 150 -->
+
+<!-- thumb = 5088, height = 105, width = 68 -->
+<!-- small = 5089, height = 154, width = 100 -->
+<!-- medium = 5090, height = 231, width = 150 -->
+
+<!-- thumb = 5096, height = 105, width = 68 -->
+<!-- small = 5097, height = 154, width = 100 -->
+<!-- medium = 5098, height = 231, width = 150 -->
+
+<!-- thumb = 5133, height = 105, width = 68 -->
+<!-- small = 5134, height = 154, width = 100 -->
+<!-- medium = 5135, height = 231, width = 150 -->
+
+<!-- thumb = 5092, height = 105, width = 68 -->
+<!-- small = 5093, height = 154, width = 100 -->
+<!-- medium = 5094, height = 231, width = 150 -->
 <tbody><tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
 <tr valign="top"><td class="rightside" width="80">
-<p><a href="schedule.php?week=20070511&amp;album=542#398">bodybagsfd_02.jpg</a><br>
-</p>
+<p><a href="schedule.php?week=#5067">BOMB QUEEN IV: SUICIDE BOMBER #4 (of 4)</a><br>
+story, art &amp; cover JIMMIE ROBINSON</p>
 </td><td width="70">
-<a href="schedule.php?week=20070511&amp;album=542#398">
-<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=399&amp;g2_serialNumber=2" border="0"></a><br><br>
+<a href="schedule.php?week=#5067">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5068&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5063">BRAWL #3 (of 3)</a><br>
+story, art, &amp; cover DAN HASPIEL &amp; MICHEL FIFFE</p>
+</td><td width="70">
+<a href="schedule.php?week=#5063">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5064&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5071">HAWAIIAN DICK, VOL. 1: BYRD OF PARADISE TP 3rd Printing</a><br>
+story B. CLAY MOORE, art &amp; cover STEVEN GRIFFIN</p>
+</td><td width="70">
+<a href="schedule.php?week=#5071">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5072&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5075">INVINCIBLE PRESENTS: ATOM EVE #1 (of 2)</a><br>
+story BENITO CERENO, art NATE BELLEGARDE, cover CORY WALKER, editor ROBERT KIRKMAN</p>
+</td><td width="70">
+<a href="schedule.php?week=#5075">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5076&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5079">PAX ROMANA #1 (of 4)</a><br>
+story, art &amp; cover JONATHAN HICKMAN</p>
+</td><td width="70">
+<a href="schedule.php?week=#5079">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5080&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5083">PROOF #3</a><br>
+story ALEX GRECIAN, art &amp; cover RILEY ROSSMO</p>
+</td><td width="70">
+<a href="schedule.php?week=#5083">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5084&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5087">REPO #5 (of 5)</a><br>
+story RICK SPEARS, art &amp; cover ROB G</p>
+</td><td width="70">
+<a href="schedule.php?week=#5087">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5088&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5091">SORROW #3 (of 4)</a><br>
+story RICK REMENDER &amp; SETH PECK, art &amp; cover FRANCESCO FRANCAVILLA &amp; EUAN MACTAVISH</p>
+</td><td width="70">
+<a href="schedule.php?week=#5091">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5092&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5095">THE SWORD #1 2nd Printing</a><br>
+story JOSHUA LUNA, art &amp; cover JONATHAN LUNA</p>
+</td><td width="70">
+<a href="schedule.php?week=#5095">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5096&amp;g2_serialNumber=2" border="0"></a><br><br>
+</td></tr>
+<tr><td colspan="2" bgcolor="#006699"><img width="2" height="2" src="images/spacer.gif" alt=""></td></tr>
+<tr valign="top"><td class="rightside" width="80">
+<p><a href="schedule.php?week=#5132">THE SWORD #3 2nd Printing</a><br>
+story JOSHUA LUNA, art &amp; cover JONATHAN LUNA</p>
+</td><td width="70">
+<a href="schedule.php?week=#5132">
+<img width="70" src="http://www.imagecomics.com/gallery2/main.php?g2_view=core.DownloadItem&amp;g2_itemId=5133&amp;g2_serialNumber=2" border="0"></a><br><br>
 </td></tr>
 
 <!--
@@ -274,11 +386,16 @@ Users who no longer wish to receive our newsletter or promotional materials from
 <br>
 ImageComics.com users are always notified when their information is being collected by outside parties. We do this so our users can make an informed choice as to whether or not they should proceed with services that require an outside party. <br>
 <br>
+<b>Membership Cancellation</b><br>
+<br>
+Image does enforce a policy that provides for termination in appropriate circumstances of members who are repeat infringers.  If you believe that a member is a repeat infringer, please follow the instructions above to contact Image and provide information sufficient for us to verify that the member is a repeat infringer. <br>
+<br>
 <b>Notification of Changes</b><br>
 <br>
 If we decide to change our privacy policy, we will post those changes on this page so our users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. If at any point we decide to use personally identifiable information in a manner different from that stated at the time it was collected, we will notify users via e-mail. Users will have a choice as to whether or not we use their information in this different manner. We will use information in accordance with the privacy policy under which the information was collected. <br><br>
 <br><br>
-</p>	</td>
+</p>
+	</td>
 	</tr>
 	</tbody></table>
 	
@@ -312,10 +429,26 @@ If we decide to change our privacy policy, we will post those changes on this pa
 <td colspan="7" bgcolor="#ffff99">
 <p align="center" class="smaller"><br>
 For general inquiries, please email <a href="mailto:info@imagecomics.com">info@imagecomics.com</a>
-<br>All content copyright © &amp; trademarked TM 2006 Image Comics or their respective owners.<br>Image and its logos are ® and © 2006 Image Comics, Inc. All rights reserved.<br><a href="./termsofservice.php">Terms of Service &amp; Privacy Policy</a><br><br></p>
+<br>
+All content copyright © &amp; trademarked TM 
+<script type="text/javascript">
+var d=new Date()
+document.write(d.getFullYear())
+</script>2020
+ Image Comics or their respective owners.<br>
+Image and its logos are ® and © 
+<script type="text/javascript">
+var d=new Date()
+document.write(d.getFullYear())
+</script>2020
+ Image Comics, Inc. All rights reserved.<br>
+Site design by <a href="http://www.comicraft.com/" target="_blank">Comicraft</a><br>
+<a href="./termsofservice.php">Terms of Service &amp; Privacy Policy</a> | <a href="./copyrightinfringement.php">Copyright 
+Infringement</a><br><br></p>
 </td>
 </tr>
 </tbody></table>
 </center>
+
 
 </body></html>
