--- a/t/te/tes/testmasters.net.html
+++ b/t/te/tes/testmasters.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the testmasters.net privacy policy that was archived on 2007-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070622225903id_/http%3A//www.testmasters180.com/common/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the testmasters.net privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227080313id_/http%3A//www.testmasters180.com/common/privacy.aspx) for the most accurate reproduction.-->
 
 <html><head>
 <title>TestMasters Privacy Policy</title>
@@ -23,7 +23,7 @@ div.syllabusSubhead {
 <link rel="stylesheet" type="text/css" href="/css/top.css">
 <div id="topPageHeader">
 <div id="topHeaderWithSlogan">
-<form name="formLogin" method="post" action="https://www.testmasters180.com/member/login.aspx" autocomplete="off">
+<form name="formLogin" method="post" action="http://member.testmasters.net/Login.aspx" autocomplete="off">
 <table id="headerLoginTable" cellspacing="0" cellpadding="0">
 <tbody>
 <tr id="headerLoginBoxRow_1">
@@ -33,12 +33,12 @@ div.syllabusSubhead {
 </tr>
 <tr id="headerLoginBoxRow_2">
 <td class="headerLoginCell_1"><div>User ID</div></td>
-<td class="headerLoginCell_2"><input type="text" name="topuserid" size="12"></td>
+<td class="headerLoginCell_2"><input type="text" name="username" size="12"></td>
 <td class="headerLoginCell_3"><a href="https://www.testmasters180.com/member/registermember.aspx" id="headerLoginNewUser">New User?</a></td>
 </tr>
 <tr id="headerLoginBoxRow_3">
 <td class="headerLoginCell_1"><div>Password</div></td>
-<td class="headerLoginCell_2"><input type="password" name="toppassword" size="12"></td>
+<td class="headerLoginCell_2"><input type="password" name="password" size="12"></td>
 <td class="headerLoginCell_3"><input type="submit" name="Submit2" value="Sign In"></td>
 </tr>
 </tbody>
@@ -66,7 +66,7 @@ writeToday();
 			<td style="width:119px;" class="tmenuitem"><a href="http://www.testmasters180.com/lsat/faculty.aspx">Faculty</a></td>
 			<td style="width:193px;" class="tmenuitem"><a href="http://www.testmasters180.com/lsat/RequestInfo.aspx">Request Information</a></td>
 			<td style="width:139px;" class="tmenuitem"><a href="http://www.testmasters180.com/commerce/enroll_start.aspx">Registration</a></td>
-			<td style="width:116px;" class="tmenuitem"><a href="http://www.testmasters180.com/member/login.aspx">Members</a></td>
+			<td style="width:116px;" class="tmenuitem"><a href="http://member.testmasters.net/Login.aspx">Members</a></td>
 		</tr>
 	</tbody></table>
 
@@ -141,14 +141,14 @@ writeToday();
     </div>
   </div>
   
-<div class="backToTop"><a href="#top"><img src="/images/arrows/backtotop.gif" alt="Back to Top" title="Back to Top" style="width:94px; height:17px;"></a></div>
+<div style="height:20px"><span></span></div>
 </div>
 
 <link rel="stylesheet" type="text/css" href="/css/bottom.css">
 <div id="bottomarea">
   <div class="bottomLinks"><a href="http://www.testmasters180.com/" class="bottomLinks" title="TestMasters LSAT Preparation Course">Home</a>|<a href="http://www.testmasters180.com/common/contact_us.aspx" class="bottomLinks" title="Contact TestMasters">Contact
       Us</a>|<a href="http://www.testmasters180.com/lsat/employment.aspx" class="bottomLinks">Employment
-      Opportunities</a>|<a href="https://www.testmasters180.com/emp/login.aspx" class="bottomLinks">Employee
+      Opportunities</a>|<a href="https://emp.testmasters.net" class="bottomLinks">Employee
       Login</a>|<a href="http://www.testmasters180.com/lsat/LawSchoolLinks.aspx" class="bottomLinks">Links</a>|<a href="http://www.testmasters180.com/common/terms.aspx" class="bottomLinks">Terms
       of Use</a>|<a href="http://www.testmasters180.com/common/privacy.aspx" class="bottomLinks">Privacy
       Policy</a>|<a href="http://www.testmasters180.com/common/ada.aspx" class="bottomLinks">ADA</a></div>
@@ -175,6 +175,13 @@ var pm_tag = "<SCR" + "IPT LANGUAGE='JavaScript' " + "SRC=//" + pm_scripthost + 
 document.write(pm_tag);
 // -->
 </script><script language="JavaScript" src="//srv.perf.overture.com/collweb/ScriptServlet?ver=1.4&amp;aid=3RVSULTDO19G0M2B78CVG78KJ4"></script>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-772206-2";
+urchinTracker();
+</script>
 
 
 
