--- a/o/or/orb/orbitz.com.html
+++ b/o/or/orb/orbitz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the orbitz.com privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630155037id_/http%3A//www.orbitz.com/pagedef/content/legal/privacy05.jsp%3FpopupsDisabled%3Dfalse) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the orbitz.com privacy policy that was archived on 2007-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227081904id_/http%3A//www.orbitz.com/pagedef/content/legal/privacy05.jsp%3FpopupsDisabled%3Dfalse) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- IA Page ID: TODO --><head>
 <title>Orbitz: Privacy Policy</title>
@@ -11,10 +11,12 @@
 
 	
 
-<meta name="DCSext.b" content="A"><meta name="DCSext.strf" content="Self-Referred">
+<meta name="DCSext.b" content="A"><meta name="DCSext.strf" content="6">
 <!-- START OF SmartSource Data Collector TAG -->
 <!-- Copyright (c) 1996-2005 WebTrends Inc.  All rights reserved. -->
 <!-- $DateTime: 2006/03/09 14:15:22 $ -->
+
+
 <script type="text/javascript"><!--
 var gDomain="ctix8.cheaptickets.com";
 var gDcsId="dcs4mzzicc2ep3maahjx8kl5c_7e2i";
@@ -31,14 +33,20 @@ if ((typeof(gConvert)!="undefined")&&gConvert&&(document.cookie.indexOf(gFpc+"="
 	var wtProductionEnv='false';
 </script>
 
-<script src="/site/js/tracking/webtrends.js" type="text/javascript"></script>
+<script src="/shared/js/tracking/webtrends.js" type="text/javascript"></script>
 
 
 	<script src="/site/js/tracking/dotomi.js" type="text/javascript"></script>
 
 
 <noscript>
-<img alt="" border="0" name="DCSIMG" width="1" height="1" src="http://ctix8.cheaptickets.com/dcs4mzzicc2ep3maahjx8kl5c_7e2i/njs.gif?dcsuri=/nojavascript&amp;WT.js=No" />
+	
+		
+		
+			<img alt="" border="0" name="DCSIMG" width="1" height="1" src="http://ctix8.cheaptickets.com/dcs4mzzicc2ep3maahjx8kl5c_7e2i/njs.gif?dcsuri=/nojavascript&amp;WT.js=No" />
+		
+		
+	
 </noscript>
 
 <script>
@@ -49,12 +57,12 @@ if ((typeof(gConvert)!="undefined")&&gConvert&&(document.cookie.indexOf(gFpc+"="
 
 
 <style type="text/css">
-	@import url("/shared/css/global.css.jsp?cache=20030530");
-	@import url("/shared/css/popup.css.jsp?cache=20030530");
+	@import url("/shared/css/global.css.jsp?cache=Papa");
+	@import url("/shared/css/popup.css.jsp?cache=Papa");
 	
 </style>
 
-<script type="text/javascript" language="JavaScript" src="/shared/js/global.js?cache=20030530"></script>
+<script type="text/javascript" language="JavaScript" src="/shared/js/global.js?cache=Papa"></script>
 
 
 </head>
@@ -383,12 +391,12 @@ This policy will not cover the use of your Personal Information by these other c
 
 
 
-
 		
 	
 	
 		<a class="eaEnabled" href="/pagedef/content/legal/terms05.jsp?popupsDisabled=false" target="_blank" onclick="return popUpGen('/pagedef/content/legal/terms05.jsp?popupsDisabled=false');">Terms and Conditions of Use</a>
 	
+
 ; to protect ourselves against liability or prevent fraudulent activity; or where it is necessary to permit us to pursue available remedies or limit any damages that we may sustain.
 
 </li><li>To effect a corporate transaction, in connection with the sale, merger, spin-off, or other corporate reorganization of our corporation, where the information is provided to the new controlling entity in regular course of business.
@@ -604,8 +612,15 @@ When Personal Information is sent to our service providers, we require, in our c
 <tr><td>Mailing address:</td><td>Chief Privacy Officer<br>
 	Orbitz LLC<br>
 	500 West Madison Street, Suite 1000, Chicago, IL 60661</td></tr>
-<tr><td>Telephone:</td><td>888-656-4546 (within the United States)<br>
-	701-280-5683 (Outside the United States). </td></tr>
+<tr><td>Telephone:</td><td>
+
+
+
+    888-656-4546 (within the United States)<br>
+    701-280-5683 (Outside the United States).
+
+
+</td></tr>
 </tbody></table>
 </div>
 
